Ansible勉強会用の更新 #4 - ignitionディレクトリを作成 - 各パッケージを最新版に反映

--- a/roles/common/tasks/epel.yml
+++ b/roles/common/tasks/epel.yml
@@ -3,6 +3,6 @@
   yum: name=http://ftp-srv2.kddilabs.jp/Linux/distributions/fedora/epel/6/x86_64/epel-release-6-8.noarch.rpm
   tags: epel
 
-#- name: disable epel repository
-#  ini_file: dest=/etc/yum.repos.d/epel.repo section="epel" option="enabled" value="0"
-#  tags: epel
+- name: disable epel repository
+  ini_file: dest=/etc/yum.repos.d/epel.repo section="epel" option="enabled" value="0"
+  tags: epel
