--- a/roles/package/tasks/tomcat6.yml
+++ b/roles/package/tasks/tomcat6.yml
@@ -33,3 +33,15 @@
 
 - name: Be sure setenv created.
   template: src=profile/setenv_tomcat6.j2 dest={{ directories.Tomcat.prefix}}bin/setenv.sh owner=tomcat group=tomcat mode=0755
+
+- name: Be sure unnecessary directories are deleted.
+  file: path={{ directories.Tomcat.prefix }}/webapps/{{ item }} state=absent
+  with_items:
+      - ROOT
+      - docs
+      - host-manager
+      - manager
+      - examples
+
+- name: Be sure Nginx is started.
+  service: name=nginx state=started enabled=yes
